Реализован эндпоинт GET /persons (пагинированный список с фильтрацией по email)
